--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,5 +1,6 @@
 body {
     flex-direction: column;
+    background-color: rgb(249, 249, 241);
 }
 
 main {
@@ -10,9 +11,25 @@ main {
 article {
     flex: 2;
     overflow-y: auto;
+    color: rgb(46, 94, 78);
 }
 
 aside {
     flex: 1;
     overflow-y: auto;
 }
+
+header {
+    background-color: rgb(244, 153, 168);
+}
+
+h2 {
+    text-decoration: underline;
+}
+
+h3 {
+    text-decoration: underline;
+}
+
+
+
